--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,12 +10,13 @@ branches:
   only:
     - master
 
+image:
+    - Visual Studio 2015
+    - Visual Studio 2017
+
 platform:
     - x86
-    #- x64
-    
-configuration:
-- 14 2015
+    - x64
 
 init:
 - if "%platform%" EQU "x64" ( for %%a in (2008 2010 MinGW) do ( if "%Configuration%"=="%%a" (echo "Skipping unsupported configuration" && exit /b 1 ) ) )
