--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,12 +11,15 @@ branches:
     - master
 
 image:
-    - Visual Studio 2015
-    - Visual Studio 2017
-
+  - Visual Studio 2013
+  - Visual Studio 2015
+  - Visual Studio 2017
+    
 platform:
-    - x86
-    - x64
+  - Win32
+  - x64
+  
+configuration: Release
 
 init:
 - if "%platform%" EQU "x64" ( for %%a in (2008 2010 MinGW) do ( if "%Configuration%"=="%%a" (echo "Skipping unsupported configuration" && exit /b 1 ) ) )
