Editor: introduce grid + separate main editor app into new files.

--- a/src/Editor/CMakeLists.txt
+++ b/src/Editor/CMakeLists.txt
@@ -16,17 +16,26 @@ INCLUDE_DIRECTORIES(
 #==============================================================================
 SET( native_editor_dll_src
     NativeEditorDll/src/SceneNodeIterator.h
+    NativeEditorDll/src/EditorApplication.h
+    NativeEditorDll/src/EditorApplication.cpp
     NativeEditorDll/src/EditorMain.cpp
     NativeEditorDll/src/EditorMain.h
 )
 
+SET( native_editor_renderentities_src 
+    NativeEditorDll/src/RenderEntities/Grid.h
+    NativeEditorDll/src/RenderEntities/Grid.cpp
+)
+
 SOURCE_GROUP( Include\\Scene         FILES ${scene_inc} )
+SOURCE_GROUP( RenderEntities         FILES ${native_editor_renderentities_src} )
 
 #==============================================================================
 # Define the editor dll
 #==============================================================================
 ADD_LIBRARY( osre_nativeeditor SHARED
     ${native_editor_dll_src}
+    ${native_editor_renderentities_src}
 )
 
 target_link_libraries ( osre_nativeeditor osre ${platform_libs} )
