Doc: move doxygen into its own folder.

--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -318,6 +318,8 @@ SET( renderbackend_src
     RenderBackend/ParticleGenerator.cpp
     RenderBackend/HWBufferManager.cpp
     RenderBackend/Shader.cpp
+    RenderBackend/TextRenderer.h
+    RenderBackend/TextRenderer.cpp
 )
 SET( renderbackend_oglrenderer_src
     RenderBackend/OGLRenderer/OGLCommon.h
