--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ image:
   - Visual Studio 2017
     
 platform:
-  - x86
+  - Win32
   - x64
   
 configuration: Release
@@ -33,13 +33,9 @@ install:
 before_build:
 - call c:\projects\osre\scripts\appveyor\setup_repo.bat
 
-build_script:
-- cd c:\projects\osre
-- set SDL_PATH=\projects\osre\SDL2-2.0.5\
-- if "%platform%" equ "x64" (cmake CMakeLists.txt -G "Visual Studio %Configuration% Win64")
-- if "%platform%" equ "x86" (cmake CMakeLists.txt -G "Visual Studio %Configuration%")
-- if "%platform%" equ "x64" (msbuild /m /p:Configuration=Release /p:Platform="x64" osre.sln)
-- if "%platform%" equ "x86" (msbuild /m /p:Configuration=Release /p:Platform="Win32" osre.sln)
+build:
+  parallel: true
+  project: osre.sln
 
 after_build:
   - 7z a osre.7z c:\projects\osre\bin\release\* c:\projects\osre\lib\release\*
