--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,11 @@ install:
 # Make compiler command line tools available
 - ps: Start-FileDownload 'https://www.libsdl.org/release/SDL2-devel-2.0.5-VC.zip'
 - ps: 7z x SDL2-devel-2.0.5-VC.zip
-#- call c:\projects\osre\scripts\appveyor\compiler_setup.bat
+- if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2013" set CMAKE_GENERATOR_NAME=Visual Studio 12 2013
+- if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2015" set CMAKE_GENERATOR_NAME=Visual Studio 14 2015
+- if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2017" set CMAKE_GENERATOR_NAME=Visual Studio 15 2017
+- if "%platform%"=="x64" set CMAKE_GENERATOR_NAME=%CMAKE_GENERATOR_NAME% Win64
+- cmake %CMAKE_DEFINES% -G "%CMAKE_GENERATOR_NAME%"
 
 before_build:
 - call c:\projects\osre\scripts\appveyor\setup_repo.bat
