--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,8 @@ configuration: Release
 
 init:
 - if "%platform%" EQU "x64" ( for %%a in (2008 2010 MinGW) do ( if "%Configuration%"=="%%a" (echo "Skipping unsupported configuration" && exit /b 1 ) ) )
-- choco install doxygen.portable
+- appveyor-retry choco install doxygen.portable
+- appveyor-retry choco install graphviz.portable
 
 install:
 # Make compiler command line tools available
