--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - sudo apt-get update -qq
 install:
   - sudo apt-get install cmake
-  - sudo apt-get install doxygen dot
+  - sudo apt-get install doxygen graphviz
   - sudo apt-get install -qq libsdl2-dev gcc-4.8
   - sudo apt-get install g++-4.8
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
