--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,9 +131,18 @@ else (DOXYGEN_FOUND)
     message("Doxygen need to be installed to generate the doxygen documentation")
 ENDIF ( DOXYGEN_FOUND )
 
-set_target_properties(  doc              PROPERTIES FOLDER Documentation )
-set_target_properties(  cppcore          PROPERTIES FOLDER ThirdParty )
-set_target_properties(  cppcore_unittest PROPERTIES FOLDER ThirdParty )
+set_target_properties(  doc                PROPERTIES FOLDER Documentation )
+set_target_properties(  cppcore            PROPERTIES FOLDER ThirdParty )
+set_target_properties(  cppcore_unittest   PROPERTIES FOLDER ThirdParty )
+set_target_properties(  assimp             PROPERTIES FOLDER ThirdParty )
+set_target_properties(  assimp_cmd         PROPERTIES FOLDER ThirdParty )
+set_target_properties(  assimp_viewer      PROPERTIES FOLDER ThirdParty )
+set_target_properties(  IrrXML             PROPERTIES FOLDER ThirdParty )
+set_target_properties(  jsoncpp_lib_static PROPERTIES FOLDER ThirdParty )
+set_target_properties(  zlib               PROPERTIES FOLDER ThirdParty )
+set_target_properties(  zlibstatic         PROPERTIES FOLDER ThirdParty )
+set_target_properties(  unit               PROPERTIES FOLDER ThirdParty )
+
 if( WIN32 )
     set_target_properties(  OSREEditor       PROPERTIES FOLDER Editor )
 endif( WIN32 )
