Renaming mesh: rename geoBuilder to meshbuilder.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,13 +135,13 @@ set_target_properties(  doc                PROPERTIES FOLDER Documentation )
 set_target_properties(  cppcore            PROPERTIES FOLDER ThirdParty )
 set_target_properties(  cppcore_unittest   PROPERTIES FOLDER ThirdParty )
 set_target_properties(  assimp             PROPERTIES FOLDER ThirdParty )
-set_target_properties(  assimp_cmd         PROPERTIES FOLDER ThirdParty )
-set_target_properties(  assimp_viewer      PROPERTIES FOLDER ThirdParty )
-set_target_properties(  IrrXML             PROPERTIES FOLDER ThirdParty )
-set_target_properties(  jsoncpp_lib_static PROPERTIES FOLDER ThirdParty )
-set_target_properties(  zlib               PROPERTIES FOLDER ThirdParty )
-set_target_properties(  zlibstatic         PROPERTIES FOLDER ThirdParty )
-set_target_properties(  unit               PROPERTIES FOLDER ThirdParty )
+#set_target_properties(  assimp_cmd         PROPERTIES FOLDER ThirdParty )
+#set_target_properties(  assimp_viewer      PROPERTIES FOLDER ThirdParty )
+#set_target_properties(  IrrXML             PROPERTIES FOLDER ThirdParty )
+#set_target_properties(  jsoncpp_lib_static PROPERTIES FOLDER ThirdParty )
+#set_target_properties(  zlib               PROPERTIES FOLDER ThirdParty )
+#set_target_properties(  zlibstatic         PROPERTIES FOLDER ThirdParty )
+#set_target_properties(  unit               PROPERTIES FOLDER ThirdParty )
 
 if( WIN32 )
     set_target_properties(  OSREEditor       PROPERTIES FOLDER Editor )
