Doc: make add to filter depending on option OSRE_BUILD_DOC.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,7 +140,9 @@ IF( OSRE_BUILD_DOC )
   ENDIF ( DOXYGEN_FOUND )
 ENDIF( OSRE_BUILD_DOC )
 
-set_target_properties(  doc                PROPERTIES FOLDER Documentation )
+IF ( OSRE_BUILD_DOC )  
+  set_target_properties(  doc                PROPERTIES FOLDER Documentation )
+ENDIF( OSRE_BUILD_DOC )
 set_target_properties(  cppcore            PROPERTIES FOLDER ThirdParty )
 set_target_properties(  cppcore_unittest   PROPERTIES FOLDER ThirdParty )
 set_target_properties(  assimp             PROPERTIES FOLDER ThirdParty )
