Renderbackend: Introduce ids for passes and batches.

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -68,6 +68,7 @@ SET( unittest_platform_src
 )
 
 SET ( unittest_rb_src
+    src/RenderBackend/RenderBackendServiceTest.cpp
 	src/RenderBackend/CullStateTest.cpp
     src/RenderBackend/BlendStateTeste.cpp
     #src/RenderBackend/PolygonStateTest.cpp
