VS2019: fix the build.

--- a/3dparty/assimp/code/CMakeLists.txt
+++ b/3dparty/assimp/code/CMakeLists.txt
@@ -930,8 +930,11 @@ if( MSVC )
     set(MSVC_PREFIX "vc120")
   elseif( MSVC14 )
     set(MSVC_PREFIX "vc140")
-  else()
+  elseif( MSVC15 )
     set(MSVC_PREFIX "vc150")
+  else()
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
+    set(MSVC_PREFIX "vc160")
   endif()
   set(LIBRARY_SUFFIX "${ASSIMP_LIBRARY_SUFFIX}-${MSVC_PREFIX}-mt" CACHE STRING "the suffix for the assimp windows library")
 endif()
