Build: fix VS2019 detection.

--- a/3dparty/assimp/code/CMakeLists.txt
+++ b/3dparty/assimp/code/CMakeLists.txt
@@ -915,6 +915,9 @@ IF (ASSIMP_BUILD_NONFREE_C4D_IMPORTER)
 ENDIF (ASSIMP_BUILD_NONFREE_C4D_IMPORTER)
 
 if( MSVC )
+  if(MSVC_VERSION GREATER_EQUAL 1920)
+      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
+  endif()
   # in order to prevent DLL hell, each of the DLLs have to be suffixed with the major version and msvc prefix
   if( MSVC70 OR MSVC71 )
     set(MSVC_PREFIX "vc70")
@@ -930,8 +933,9 @@ if( MSVC )
     set(MSVC_PREFIX "vc120")
   elseif( MSVC14 )
     set(MSVC_PREFIX "vc140")
-  elseif( MSVC15 )
-    set(MSVC_PREFIX "vc150")
+
+  elseif( MSVC142 )
+    set(MSVC_PREFIX "vc142")
   else()
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
     set(MSVC_PREFIX "vc160")
