Introduce test for projects.

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -34,6 +34,7 @@ SET ( unittest_assets_src
 
 SET ( unittest_app_src
     src/App/TAbstractCtrlBaseTest.cpp
+	src/App/ProjectTest.cpp
 )
 
 SET ( unittest_common_src
