--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -54,7 +54,7 @@ target_link_libraries ( ModelLoading osre )
 target_link_libraries ( UIDemo       osre )
 target_link_libraries ( Instancing   osre )
 
-set_target_properties(  HelloWorld   PROPERTIES FOLDER Samples )
-set_target_properties(  ModelLoading PROPERTIES FOLDER Samples )
-set_target_properties(  UIDemo       PROPERTIES FOLDER Samples )
-set_target_properties(  UIDemo       PROPERTIES Instancing Samples )
+set_target_properties( HelloWorld   PROPERTIES FOLDER Samples )
+set_target_properties( ModelLoading PROPERTIES FOLDER Samples )
+set_target_properties( UIDemo       PROPERTIES FOLDER Samples )
+set_target_properties( Instancing   PROPERTIES FOLDER Samples )
