--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 
 before_install:
-  - yes | sudo add-apt-repository ppa:zoogie/sdl2-snapshots
+  #- yes | sudo add-apt-repository ppa:zoogie/sdl2-snapshots
   - yes | sudo add-apt-repository ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
 install:
