--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -410,6 +410,7 @@ SET( scripting_mono_inc
 # UI
 #==============================================================================
 SET( ui_src
+	UI/UICommon.cpp
     UI/Image.cpp
 	UI/FocusControl.cpp
     UI/Widget.cpp
@@ -425,6 +426,7 @@ SET( ui_src
 SET( ui_inc
     ${HEADER_PATH}/UI/UICommon.h
 	${HEADER_PATH}/UI/FocusControl.h
+	${HEADER_PATH}/UI/Layouter.h
 	${HEADER_PATH}/UI/Image.h
     ${HEADER_PATH}/UI/Widget.h
     ${HEADER_PATH}/UI/ButtonBase.h
