--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -37,7 +37,7 @@ SET( app_inc
     ${HEADER_PATH}/App/AbstractBehaviour.h
     ${HEADER_PATH}/App/AppBase.h
     ${HEADER_PATH}/App/Component.h
-    ${HEADER_PATH}/App/GameObject.h
+    ${HEADER_PATH}/App/Entity.h
     ${HEADER_PATH}/App/ServiceProvider.h
     ${HEADER_PATH}/App/Project.h
     ${HEADER_PATH}/App/TAbstractCtrlBase.h
@@ -47,7 +47,7 @@ SET( app_inc
 SET( app_src
     App/AppBase.cpp
     App/Component.cpp
-    App/GameObject.cpp
+    App/Entity.cpp
     App/ServiceProvider.cpp
 	App/Project.cpp
 )
